# dprint-plugin-golangci

./: Cargo.toml  README.md  dprint.json
.github/scripts/: create-plugin-json.ts
.github/scripts/e2e/: run.sh  run.ts
.github/scripts/release/: create-plugin-json.ts  determine-version.ts
.github/workflows/: _reusable-cargo-build.yaml  _reusable-cargo-test.yaml  _reusable-clippy.yaml  _reusable-e2e.yaml  _reusable-pr-guard.yaml  _reusable-release.yaml  _reusable-rustfmt.yaml  auto-release.yaml  ci.yaml  on-release-merge.yaml  promote-release.yaml  pull_request.yaml  push.yaml  release.yaml
deployment/: schema.json
src/: configuration.rs  golangci.rs  handler.rs  installer.rs  lib.rs  main.rs
tests/: tests.rs
