[package]
name = "dprint-plugin-golangci"
version = "0.1.0"
edition = "2024"
description = "dprint process plugin for Go static analysis via golangci-lint"
license = "MIT"
repository = "https://github.com/ageha734/dprint-plugin-golangci"

[[bin]]
name = "dprint-plugin-golangci"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
