[package]
name = "dprint-plugin-golangci"
version = "0.1.0"
authors = ["ageha734"]
edition = "2024"
description = "dprint process plugin for Go static analysis via golangci-lint"
license = "MIT"
repository = "https://github.com/ageha734/dprint-plugin-golangci"
keywords = ["formatting", "formatter", "golangci-lint", "dprint", "go"]

[[bin]]
name = "dprint-plugin-golangci"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "=1.0.98"
dprint-core = { version = "=0.67.5", features = ["process"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.45.1", features = ["rt", "time", "process", "io-util"] }

[dev-dependencies]
dprint-development = "=0.10.1"
pretty_assertions = "=1.4.1"
tempfile = "=3.19.1"
