[package]
name = "dprint-plugin-golangci"
version = "1.2.0-alpha.20260603.7"
authors = ["ageha734"]
edition = "2024"
keywords = ["formatting", "formatter", "golangci-lint", "dprint", "go"]
license = "MIT"
repository = "https://github.com/ageha734/dprint-plugin-golangci"
description = "dprint process plugin for Go static analysis via golangci-lint"

[[bin]]
name = "dprint-plugin-golangci"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "=1.0.98"
dprint-core = { version = "=0.67.4", features = ["process"] }
reqwest = { version = "=0.12.15", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.45.1", features = ["rt", "time", "process", "io-util", "fs"] }
dirs = "=6.0.0"
flate2 = "=1.1.2"
tar = "=0.4.46"

[dev-dependencies]
dprint-development = "=0.10.1"
pretty_assertions = "=1.4.1"
tempfile = "=3.19.1"
